kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-catalyst-api-v1
  labels:
    istio.io/dataplane-mode: ambient
