kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-catalyst-api-v1
  namespace: platform-catalyst-api-v1
  labels:
    app: platform-catalyst-api-v1
    app.kubernetes.io/name: platform-catalyst-api-v1
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: platform-catalyst-api-v1
